<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">梅州城市通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="maintitle">梅州城市通</string>
    <string name="shopping">逛商家</string>
    <string name="citycard">城市通卡</string>
    <!-- 商家详细 -->
    <string name="feature">经营特色：</string>
    <string name="open">营业：</string>
    <string name="tel">电话：</string>
    <string name="address">地址：</string>
    <string name="distance">距离：</string>
    <string name="comment">点评：</string>
    <string name="percost">人均：</string>
    <string name="storeintroduce">商家介绍</string>
    <string name="route">路线图</string>
    <!-- 提示 -->
    <string name="dialog_tips">提示</string>
    <string name="loading">加载中\u2026</string>
    <string name="posterfailetips">获取海报失败。</string>
    <string name="postererrortips">获取海报失败，请检查网络。</string>
    <string name="your_network_has_disconnected">网络未连接，请你连接网络！</string>
    <string name="your_gps_has_notopen">GPS未开启，请开启GPS。</string>
    <string name="get_your_location">获取位置失败，请确认打开GPS或者位置服务。</string>
    <string name="loadding_data">正在加载数据，请稍后再试。</string>
    <string name="searchcontent">搜索内容为空，请输入搜索内容</string>
    <string name="routestorefaile">无法获取商家地图位置</string>

    <!-- 登陆注册 -->
    <string name="userlogin">用户登陆</string>
    <string name="acount">账号:</string>
    <string name="psw">密码:</string>
    <string name="acounthint">请输入账号</string>
    <string name="pswhint">请输入密码</string>
    <string name="qqlogin"> 用QQ账号登陆</string>

    <!-- 我的账号 -->
    <string name="mycount">我的账号</string>
    <string name="balance">余额：</string>
    <string name="usercard">会员卡</string>
    <string name="signin">每日签到</string>
    <string name="myorder">我的订单</string>
    <string name="myshare">我的分享</string>
    <string name="jifen">积分：</string>
    <string name="unbound">未绑定，点击绑定</string>
    <string name="unsignin">今天还未签到(点击签到)</string>
    <string name="signedin">今天已签到</string>
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>
    <!-- 账号设置 -->
    <string name="acountsetting">账号设置</string>
    <string name="useracount">会员账号</string>
    <string name="email">电子邮箱</string>
    <string name="oldpwd">初始密码</string>
    <string name="loginpwd">登陆密码</string>
    <string name="repeatpwd">重复密码</string>
    <string name="mobie">手机号码</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="unknow">未知</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="pwdhint">不修改请留空</string>
    <string name="birthdayhint">点击选择日期</string>
    <!-- 激活会员卡 -->
    <string name="activatecard">激活会员卡</string>
    <string name="truename">真实姓名</string>
    <string name="mobienum">手  机  号</string>
    <string name="cardnum">会员卡号</string>
    <string name="cardpwd">密        码</string>
    <string name="cardnumhint">例如：0753 000100</string>
    <string name="cardpwdhint">请输入会员卡背面5位密码</string>
    <!-- 我的订单 -->

    <string name="ordernum">订单号:</string>
    <string name="ordersn">序列号:</string>
    <string name="orderpwd">状态:</string>
    <string name="orderstate">密码:</string>

    <!-- 用户注册 -->
    <string name="regist">用户注册</string>
    <string name="regist_acount">账号</string>
    <string name="regist_pwd">密码</string>
    <string name="regist_email">邮箱</string>
    <string name="regist_mobile">手机</string>
    <string name="pwd_hint">请输入4位以上密码</string>
    <string name="pwd_repeat">请再次输入确认密码</string>
    <string name="mobile_hint">请输入你的手机号码</string>
    <string name="email_hint">请输入你的邮箱</string>
    <string name="acount_hint">请输入你的账号</string>
    <string name="registnewcount">没有账号，请注册新账号</string>
    <string name="bindmycount">已有账号，请绑定账号</string>
    <string name="bindcount">绑定账号</string>
    <!-- 好优惠 -->
    <string name="privilege">好优惠</string>
    <string name="nowprice">现价：</string>
    <string name="buyed">已买：</string>
    <string name="price">原价：</string>
    <string name="cutdown">折扣：</string>
    <string name="savemoney">节省：</string>
    <string name="lefttime">剩余时间：</string>
    <string name="productinfo">查看该产品详细介绍</string>

    <!-- 购物车 -->
    <string name="mycart">购物车</string>
    <string name="singelprice">单价：</string>
    <string name="count">总结算价：</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tips_cart">还没有商品哦，去看看吧！</string>

    <!-- 确认订单 -->
    <string name="num">数量：</string>
    <string name="productcount">总价：</string>
    <string name="tips_order">点击添加订单备注……</string>
    <string name="use_zhifubao">支付宝支付</string>
    <string name="use_lefemoney">余额支付</string>
    <string name="pay_zhifubao">请选择“即时到帐”支付！</string>
    <string name="all_product_count">商品总价：</string>
    <string name="should_pay">应付款金额：</string>
    <string name="jifen_change">购买成功后积分变更：</string>
    <string name="editmoblie">请输入您的手机号：</string>
    <string name="tips_entermobile">输入您的手机号</string>
    <!-- 微分享 -->
    <string name="microshare">微分享</string>
    <string name="hint_comment">输入评论</string>
    <string name="hint_reply">输入回复</string>
    <string name="hint_pubshare">输入分享内容</string>
    <string name="hint_pubsharetitle">输入分享标题</string>
    <string name="tips_loadmore">查看更多</string>
    <string name="sendfrom">来自于：</string>

    <!-- 会员卡激活 -->
    <string name="tips_truename">请输入真实姓名</string>
    <string name="tips_mobile">请输入手机号码</string>
    <string name="tips_mzcard">请输入会员卡卡号</string>
    <string name="tips_mzpwd">请输入会员卡密码</string>

    <!-- 招聘列表 -->
    <string name="title_invite">商家招聘</string>
    <string name="post">招聘：</string>
    <string name="sex_invite">性别：</string>
    <string name="degree">学历：</string>
    <string name="number">人数：</string>
    <string name="treatment">待遇：</string>
    <string name="phone">商家电话：</string>
    <string name="contact">联系人：</string>
    <string name="address_invite">商家地址：</string>
    <string name="claim">要求：</string>
    <string name="create_time">发布时间：</string>
    <!-- 促销活动 -->
    <string name="sale">促销活动</string>

    <!-- 积分商城 -->
    <string name="changestore">积分商城</string>
    <string name="changeproductdetail">商品详情</string>
    <!-- 消息 -->
    <string name="message">消息</string>
    <string name="my_share">你的微分享：</string>
    <string name="havecomment">有了新的评论。</string>
    <string name="my_comment">你在微分享：</string>
    <string name="havereply">的评论有了新的回复。</string>
    <string name="tips_message">还没有消息，先去逛分享吧！</string>
    
    
    <!-- 支付宝 -->
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="partnerHint">"partner"</string>
	<string name="sellerHint">"seller"</string>
	<string name="out_trade_noHint">"out_trade_no"</string>
	<string name="subjectHint">"subject"</string>
	<string name="bodyHint">"body"</string>
	<string name="total_feeHint">"total_fee"</string>
	<string name="notify_urlHint">"notify_url"</string>
	<string name="charsetHint">"charset"</string>
	<string name="signTypeHint">"signType"</string>
	<string name="confirm_install_hint">"安装提示"</string>	
	<string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
	<string name="Ensure">"确定"</string>
	<string name="Cancel">"取消"</string>
	<string name="check_sign_failed">您的订单信息已被非法篡改。</string> 
</resources>