<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_edituserinfo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_shoppingdetail"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <TextView
                android:id="@+id/useracount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/useracount"
                android:textAppearance="@style/Textcolor.SomberSmall" />

            <TextView
                android:id="@+id/tv_useracount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/useracount"
                android:textAppearance="@style/Textcolor.SomberSmall" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/graymore" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/email"
                android:textAppearance="@style/Textcolor.SomberSmall" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/email"
                android:textAppearance="@style/Textcolor.SomberSmall" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/graymore" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="8dp" >

            <TextView
                android:id="@+id/oldpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/oldpwd"
                android:textAppearance="@style/Textcolor.SomberSmall" />

            <EditText
                android:id="@+id/tv_oldpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/oldpwd"
                android:background="@null"
                android:hint="@string/pwdhint"
                android:inputType="textPassword"
                android:textAppearance="@style/Textcolor.SomberSmall" />
        </RelativeLayout>
         <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/graymore" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="8dp" >

            <TextView
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/loginpwd"
                android:textAppearance="@style/Textcolor.SomberSmall" />

            <EditText
                android:id="@+id/tv_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/pwd"
                android:background="@null"
                android:hint="@string/pwdhint"
                android:inputType="textPassword"
                android:textAppearance="@style/Textcolor.SomberSmall" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/graymore" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <TextView
                android:id="@+id/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/repeatpwd"
                android:textAppearance="@style/Textcolor.SomberSmall" />

            <EditText
                android:id="@+id/tv_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/repeat"
                android:background="@null"
                android:inputType="textPassword"
                android:textAppearance="@style/Textcolor.SomberSmall" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_shoppingdetail"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <TextView
                android:id="@+id/mobie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/mobie"
                android:textAppearance="@style/Textcolor.SomberSmall" />

            <EditText
                android:id="@+id/tv_mobie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/mobie"
                android:background="@null"
                android:inputType="textNoSuggestions"
                android:textAppearance="@style/Textcolor.SomberSmall" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/graymore" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/birthday"
                android:textAppearance="@style/Textcolor.SomberSmall" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/birthday"
                android:text="@string/birthdayhint"
                android:textAppearance="@style/Textcolor.SomberSmall" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/graymore" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/sex"
                android:textAppearance="@style/Textcolor.SomberSmall" />

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/sex"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rd_unknow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:checked="true"
                    android:drawableLeft="@drawable/selector_radio"
                    android:text="@string/unknow"
                    android:textAppearance="@style/Textcolor.SomberSmall" />

                <RadioButton
                    android:id="@+id/rd_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_radio"
                    android:text="@string/man"
                    android:textAppearance="@style/Textcolor.SomberSmall" />

                <RadioButton
                    android:id="@+id/rd_women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_radio"
                    android:text="@string/women"
                    android:textAppearance="@style/Textcolor.SomberSmall" />
            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_saveinfo" />

</LinearLayout>